<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_horizontal_margin">


    <RelativeLayout
        android:id="@+id/initial_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/intial_header_icon"
            android:layout_width="@dimen/initial_head_icon_size"
            android:layout_height="@dimen/initial_head_icon_size"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/intial_header_icon"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_appname"/>

            <TextView
                android:id="@+id/initial_header_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_app_version"/>


            <TextView
                android:id="@+id/initial_header_bintu_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_bintu_version"/>

            <TextView
                android:id="@+id/initial_header_nanoStream_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_nanostream_version"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_legal"/>
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/initial_about_nano_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/logo_nanocosmos"/>
</RelativeLayout>